Use getFirst() method